Sun Aug 22 16:09:30 BST 2004 (njh)
----------------------------------
  * libclamav:	Early save to disc is now compatible with FOLLOWURLS

Sun Aug 22 14:18:53 CEST 2004 (tk)
----------------------------------
  * libclamav: cli_scanhtml: Respect file size limit

Sun Aug 22 11:35:30 BST 2004 (njh)
----------------------------------
  * libclamav:	Save email attachments to disc earlier (as the attachment is
  			decoded rather than after decoding has finished), this
			saves memory at a small speed penalty
			Currently this is incompatible with FOLLOWURLS

Sun Aug 22 02:07:13 CEST 2004 (tk)
----------------------------------
  * freshclam: Support version verification through DNS (DNSDatabaseInfo).
	       Based on idea by Christopher X. Candreva <chris*westnet.com>,
	       see http://www.gossamer-threads.com/lists/clamav/users/11102

Sat Aug 21 14:07:47 CEST 2004 (acab)
------------------------------------
  * libclamav/pe.c: Added support for FSG 1.3

Sat Aug 21 12:59:43 BST 2004 (njh)
----------------------------------
  * libclamav:	Changed the handling of miltipart messages, that is scanning
  			emails with attachments. Reports on impact on memory
			usage and speed welcome to clamav-devel@clamav.net

Fri Aug 20 21:05:04 CEST 2004 (tk)
----------------------------------
  * libclamav/Makefile.am: add line.[ch]

Fri Aug 20 12:58:41 BST 2004 (njh)
----------------------------------
  * libclamav:		Added line.[ch]

Fri Aug 20 05:53:51 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Code tidy

Thu Aug 19 22:06:35 CEST 2004 (tk)
----------------------------------
  * libclamav/matcher-bm.c: stop and report error if signature is shorter than
			    BM_MIN_LENGTH (main.cvd:25 is now required)

Wed Aug 18 22:38:39 BST 2004 (njh)
----------------------------------
  * libclamav/mbox.c:	Multithread the followURL code - URLs are now followed					in parallel

Wed Aug 18 20:37:42 CEST 2004 (tk)
----------------------------------